List game of user fonctionnel
- ajout liste des game de l'utilisateur
- récupère les game de l'utilsateur (avant user fixe)
- récupère les moves d'une game
- redirection login -> liste game -> game
