# backend/public/swagger.json
@@ -429,6 +429,41 @@
 				}
 			}
 		},
+		"/users/name/{name}": {
+			"get": {
+				"operationId": "GetUserByName",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserOutputDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "name",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/moves": {
 			"get": {
 				"operationId": "GetAllMoves",
